# qargo

qargo-vsctasks/: .gitignore  README.md  pyproject.toml
qargo-vsctasks/src/vsctasks/: __init__.py  __main__.py  cli.py  discover.py  execute.py  launch_execute.py  launch_parse.py  parse.py  resolve.py  variables.py
qargo-workspaces/: .gitignore  README.md  pyproject.toml
qargo-workspaces/src/qargo_workspaces/: main.py
